feat(validation): restore functionality of rule 671
We still don't want to report CNC indicators on descriptions as
extensions might decide to still rely on them for a period of time.